manifests/heimdall/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      stork.libopenstorage.org/migrated: "true"
      stork.libopenstorage.org/migrationName: migrationschedule-interval-2023-01-26-185013
      stork.libopenstorage.org/migrationTime: 2023-01-26-190936
      stork.libopenstorage.org/resource-hash: "3757209548898947264"
    name: heimdall-service
    namespace: heimdall
  spec:
    type: ClusterIP
    clusterIP: 10.43.226.213
    clusterIPs:
    - 10.43.226.213
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http-80
      port: 80
    - name: https-443
      port: 443
    selector:
      app: heimdall
kind: List
metadata:
  resourceVersion: ""
