manifests/heimdall/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      acme.cert-manager.io/http01-edit-in-place: "true"
      cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/proxy-body-size: "0"
      nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
      nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    name: heimdall-ingress
    namespace: heimdall
  spec:
    rules:
    - host: dashboard.ccrow.org
      http:
        paths:
        - backend:
            service:
              name: heimdall-service
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - dashboard.ccrow.org
      secretName: heimdall-mydomain-tls
kind: List
metadata:
  resourceVersion: ""
